s03 : gestion ficher pdf et video

--- a/templates/file_management/acceuil.html.twig
+++ b/templates/file_management/acceuil.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
 <div class="row">   
     <div class="col-lg-6"><p><a href="{{ path('listImage') }}">Image</a></p></div>
-    <div class="col-lg-6"><p>Video</p></div>
-    <div class="col-lg-6"><p>Pdf</p></div>
+    <div class="col-lg-6"><p><a href="{{ path('listVideo') }}">Video</a></p></div>
+    <div class="col-lg-6"><p><a href="{{ path('listPdf') }}">Pdf</a></p></div>
     <div class="col-lg-6"><p>Random</p></div>
 </div>
 {% endblock %}
