S04 : gestion fichier random

--- a/templates/file_management/acceuil.html.twig
+++ b/templates/file_management/acceuil.html.twig
@@ -7,6 +7,6 @@
     <div class="col-lg-6"><p><a href="{{ path('listImage') }}">Image</a></p></div>
     <div class="col-lg-6"><p><a href="{{ path('listVideo') }}">Video</a></p></div>
     <div class="col-lg-6"><p><a href="{{ path('listPdf') }}">Pdf</a></p></div>
-    <div class="col-lg-6"><p>Random</p></div>
+    <div class="col-lg-6"><p><a href="{{ path('listRandom') }}">Random</a></p></div>
 </div>
 {% endblock %}
